# caiyun-weather-api-python-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml  deploy.yml  test.yml
cy_weather_api/: __init__.py  client.py
cy_weather_api/models/: __init__.py  alert.py  daily.py  hourly.py  minutely.py  realtime.py  result.py  skycon.py
tests/: test_load_from_dict.py
tests/data/: sample1.json
