[tool.poetry]
name = "cy-weather-api"
version = "0.2.0"
description = "Caiyun Weather API Python SDK"
authors = ["Caiyunapp <admin@caiyunapp.com>"]
readme = "README.md"
repository = "https://github.com/caiyunapp/caiyun-weather-api-python-sdk"

[tool.poetry.dependencies]
python = "^3.8.1"
orjson = "^3.8.7"
httpx = "^0.23.3"
dacite = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
