[tool.poetry]
name = "cy-weather-api"
version = "0.2.1"
description = "Caiyun Weather API Python SDK"
authors = ["Caiyunapp <admin@caiyunapp.com>"]
readme = "README.md"
repository = "https://github.com/caiyunapp/caiyun-weather-api-python-sdk"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
orjson = "^3.8.7"
httpx = "^0.23.3"
dacite = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
isort = "^5.12.0"
coverage = {extras = ["toml"], version = "^7.2.1"}

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = [
  ".venv/*",
  "venv/*",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
precision = 2

[tool.isort]
profile = "black"
