[project]
name = "cy_weather_api"
version = "0.2.2"
description = "Caiyun Weather API Python SDK"
maintainers = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.8.1",
    "httpx>=0.27.2",
    "orjson>=3.10.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
